// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KPrompt enables correctly with confirmationText 1`] = `
<div aria-label="Information" role="dialog" aria-modal="true" class="k-modal k-prompt">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div role="heading" aria-level="2" class="k-modal-header modal-header mb-5">
          <div class="k-prompt-header w-100">
            <div class="k-prompt-header-content d-flex align-items-center w-100">
              <!---->
              Information
              <div class="close-button"><button type="button" class="k-button non-visual-button medium rounded outline" aria-label="Close">
                  <!----> <span class="kong-icon kong-icon-close"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Close</title>
  <path d="M16 4 3 17m13 0L3 4" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round"></path>
</svg>
</span>
                  <!----></button></div>
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-body modal-body">
          <div class="k-prompt-body">
            <div class="k-prompt-body-content">

              <div class="k-prompt-confirm-text w-100">
                Type "<span class="bold-600">I Agree</span>" to confirm your action.

                <div class="k-input-wrapper pt-2"><input data-testid="confirmation-input" class="form-control k-input k-input-medium">
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-footer modal-footer d-flex">
          <div class="k-prompt-action-buttons"><button type="button" class="k-button k-prompt-cancel mr-2 medium rounded outline">
              <!---->
              Cancel
              <!----></button> <button type="button" class="k-button k-prompt-proceed medium rounded primary" disabled="disabled">
              <!---->
              <!---->
              OK
              <!----></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPrompt has a pending state 1`] = `
<div aria-label="Information" role="dialog" aria-modal="true" class="k-modal k-prompt">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div role="heading" aria-level="2" class="k-modal-header modal-header mb-5">
          <div class="k-prompt-header w-100">
            <div class="k-prompt-header-content d-flex align-items-center w-100">
              <!---->
              Information
              <div class="close-button"><button type="button" class="k-button non-visual-button medium rounded outline" aria-label="Close">
                  <!----> <span class="kong-icon kong-icon-close"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Close</title>
  <path d="M16 4 3 17m13 0L3 4" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round"></path>
</svg>
</span>
                  <!----></button></div>
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-body modal-body">
          <div class="k-prompt-body">
            <div class="k-prompt-body-content">

              <!---->
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-footer modal-footer d-flex">
          <div class="k-prompt-action-buttons"><button type="button" class="k-button k-prompt-cancel mr-2 medium rounded outline">
              <!---->
              Cancel
              <!----></button> <button type="button" class="k-button k-prompt-proceed medium rounded primary" disabled="disabled"><span class="kong-icon kong-icon-spinner" viewbox="0 0 16 16"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Loading</title>
  <g>
    <path d="M5 10a5 5 0 1 0 5-5" fill="none" stroke="#A3BBCC" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
  </g>
</svg>
</span>
              OK
              <!----></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPrompt renders custom button text 1`] = `
<div aria-label="Information" role="dialog" aria-modal="true" class="k-modal k-prompt">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div role="heading" aria-level="2" class="k-modal-header modal-header mb-5">
          <div class="k-prompt-header w-100">
            <div class="k-prompt-header-content d-flex align-items-center w-100">
              <!---->
              Information
              <div class="close-button"><button type="button" class="k-button non-visual-button medium rounded outline" aria-label="Close">
                  <!----> <span class="kong-icon kong-icon-close"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Close</title>
  <path d="M16 4 3 17m13 0L3 4" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round"></path>
</svg>
</span>
                  <!----></button></div>
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-body modal-body">
          <div class="k-prompt-body">
            <div class="k-prompt-body-content">

              <!---->
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-footer modal-footer d-flex">
          <div class="k-prompt-action-buttons"><button type="button" class="k-button k-prompt-cancel mr-2 medium rounded outline">
              <!---->
              Sweet prop cancel button
              <!----></button> <button type="button" class="k-button k-prompt-proceed medium rounded primary">
              <!---->
              <!---->
              Sweet prop action button
              <!----></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPrompt renders proper content when using props 1`] = `
<div aria-label="Sweet prop title" role="dialog" aria-modal="true" class="k-modal k-prompt">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div role="heading" aria-level="2" class="k-modal-header modal-header mb-5">
          <div class="k-prompt-header w-100">
            <div class="k-prompt-header-content d-flex align-items-center w-100">
              <!---->
              Sweet prop title
              <div class="close-button"><button type="button" class="k-button non-visual-button medium rounded outline" aria-label="Close">
                  <!----> <span class="kong-icon kong-icon-close"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Close</title>
  <path d="M16 4 3 17m13 0L3 4" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round"></path>
</svg>
</span>
                  <!----></button></div>
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-body modal-body">
          <div class="k-prompt-body">
            <div class="k-prompt-body-content">
              Sweet prop content
              <!---->
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-footer modal-footer d-flex">
          <div class="k-prompt-action-buttons"><button type="button" class="k-button k-prompt-cancel mr-2 medium rounded outline">
              <!---->
              Cancel
              <!----></button> <button type="button" class="k-button k-prompt-proceed medium rounded primary">
              <!---->
              <!---->
              OK
              <!----></button></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KPrompt renders proper content when using slots 1`] = `
<div aria-label="This is some header text" role="dialog" aria-modal="true" class="k-modal k-prompt">
  <div class="k-modal-backdrop modal-backdrop">
    <div class="k-modal-dialog modal-dialog">
      <div class="k-modal-content modal-content">
        <div role="heading" aria-level="2" class="k-modal-header modal-header mb-5">
          <div class="k-prompt-header w-100">
            <div class="k-prompt-header-content d-flex align-items-center w-100">
              <div>This is some header text</div>
              <div class="close-button"><button type="button" class="k-button non-visual-button medium rounded outline" aria-label="Close">
                  <!----> <span class="kong-icon kong-icon-close"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Close</title>
  <path d="M16 4 3 17m13 0L3 4" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round"></path>
</svg>
</span>
                  <!----></button></div>
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-body modal-body">
          <div class="k-prompt-body">
            <div class="k-prompt-body-content">
              <div>This is some body text</div>
              <!---->
            </div>
            <hr class="divider">
          </div>
        </div>
        <div class="k-modal-footer modal-footer d-flex">
          <div class="k-prompt-action-buttons">
            <div>This is some footer text</div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
